[project]
name = "ruptura"
version = "1.0.2"
authors = [
  {name="Shrinjay Sharma, Delft University of Technology, The Netherlands"},
  {name="Salvador R.G. Balestra, Pablo de Olavide University, Spain"},
  {name="Richard Baur, Shell Global Solutions International B.V., The Netherlands"},
  {name="Umang Agarwal, Shell Global Solutions International B.V., The Netherlands"},
  {name="Eric Zuidema, Shell Global Solutions International B.V., The Netherlands"},
  {name="Marcello Rigutto, Shell Global Solutions International B.V., The Netherlands"},
  {name="Sofia Calero, Eindhoven University of Technology, The Netherlands"},
  {name="Thijs J.H. Vlugt, Delft University of Technology, The Netherlands"},
  {name="David Dubbeldam, University of Amsterdam, The Netherlands"}
]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
  "matplotlib>=3",
  "numpy>=1",
  "pybind11>=2",
  "setuptools>=42"
]

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

